syntax = "proto3";
option java_multiple_files = true;
package br.ufg.lista01.rpc;

message ClassificacaoNadadorRequest {
  int32 idade = 1;
}

message ClassificacaoNadadorResponse {
  string categoria = 1;
}

service ClassificacaoNadadorService {
  rpc classificar(ClassificacaoNadadorRequest) returns (ClassificacaoNadadorResponse);
}